# conda-declarative

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: test.yml
conda_declarative/: __init__.py  _schema.py  app.py  apply.py  cli.py  constants.py  edit.py  exceptions.py  plugin.py  renderers.py  spec.py  state.py  tui.py  util.py
conda_declarative/data/: conda-manifest.schema.json
recipe/: meta.yaml
tests/: conftest.py  test_cli.py  test_spec.py  test_state.py
tests/assets/: single_environment.toml
tests/data/: example.toml
